split into proposta 1 and proposta 2

--- a/2018_2/modelo_base_trabalho_ii_mistura.ipynb
+++ b/2018_2/modelo_base_trabalho_ii_mistura.ipynb
@@ -27,47 +27,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Metodologia\n",
+    "\n",
     "1. [ ] Programação da forma P(T,V,x) para misturas usando a equação de Peng e Robinson (Reid,\n",
     "Prausnitz & Poling, 1987 - pp 42, 43)\n",
     "  1. [ ] Programar a regra de combinação e mistura clássica (Reid, Prausnitz & Poling, 1987 -\n",
     "pp 82)\n",
     "    1. [ ] usar k_ij= 0\n",
-    "  2. [ ] cálculo em sequência de P versus sequência de V para dados T para uma composição\n",
-    "rica em um componente pesado.\n",
-    "  3. [ ] cálculo em sequência de P versus sequência de V para dados T para uma composição\n",
-    "rica em um componente leve.\n",
-    "  4. [ ] Desenhar isotermas no plano P versus V para uma composição ricaem um componente\n",
-    "pesado\n",
-    "  5. [ ] Desenhar isotermas no plano P versus V para uma composição rica em um componente\n",
-    "leve\n",
-    "2. [ ] Programação V(P,T,x) usando método de solução de raiz de polinômios (numpy.roots)\n",
-    "  1. [ ] Implementar lógica de classificação de raízes de volume (líquido, vapor, intermediária e\n",
-    "não física)\n",
-    "  2. [ ] Comparar calculos pontuais com as isotermas\n",
-    "3. [ ] Programação de coeficientes de fugacidade na mistura (Reid, Prausnitz & Poling, 1987, pp\n",
+    "\n",
+    "  1. Cálculo em sequência de P versus sequência de V para algumas T dadas (como na parte I) para para mistura com uma composição rica no componente mais pesado.\n",
+    "    1. Desenhar isotermas no plano P versus V para essa composição\n",
+    "  1. Repetir cálculos para mistura com uma composição rica no componente mais leve.\n",
+    "    1. Desenhar isotermas no plano P versus V para essa composição\n",
+    "\n",
+    "1. Programação da forma V(T,P,x)\n",
+    "  1. Adaptar a função de cálculo de volume da parte I para trabalhar com a equação de estado\n",
+    "para mistura.\n",
+    "    1. Definir coeficientes da forma cúbica da equação de estado e resolver usando método\n",
+    "de solução de raiz de polinômios (numpy.roots)\n",
+    "    2. Implementar lógica de classificação de raízes de volume (líquido, vapor,\n",
+    "intermediária e não física)\n",
+    "  2. Comparar calculos pontuais com as isotermas no gráfico P versus V (como na parte I)\n",
+    "\n",
+    "1. [ ] Programação de coeficientes de fugacidade na mistura (Reid, Prausnitz & Poling, 1987, pp\n",
     "144, 145)\n",
-    "    1. [ ] testar se coeficientes de fugacidade para raiz de volume de gas a baixa pressão são\n",
-    "próximos à 1 (comportamento de gás ideal)?\n",
-    "    2. [ ] testar se no caso limite: coeficientes de fugacidade no caso de numero de componentes\n",
-    "ser 1 dá igual à exp(G{RES}/(RT)) da primeira parte do trabalho?\n",
-    "4. [ ] programação de resolução da pressão de ponto de bolha (Sandler, 2017, pp 561, 562)\n",
-    "  1. [ ] Cálculo em sequência de pressão de bolha e composição da fase vapor (y) versus\n",
-    "sequência de x para dada T\n",
+    "    1. [ ] testar caso limite\n",
+    "        1. [ ] se coeficientes de fugacidade para raiz de volume de gas a baixa pressão são\n",
+    "próximos à 1 - comportamento de gás ideal.\n",
+    "        2. [ ] se coeficientes de fugacidade no caso de numero de componentes\n",
+    "ser 1 dá igual à exp(G{RES}/(RT)) da primeira parte do trabalho.\n",
+    "4. [ ] programação de resolução da pressão de ponto de bolha\n",
+    "\n",
+    "  1. Implementar algoritmo de pressão de ponto de bolha\n",
+    "(ver anexo: Sandler, 2017, pp 561, 562)\n",
+    "  2. Testar se para composição próximo a puro ( [1,0] e [0,1] o valor de ponto de bolha dá\n",
+    "próximo a pressão de saturação de cada puro calculada da forma da parte I )\n",
+    "  3. Cálculo em sequência de pressão de bolha (\n",
+    " ) e composição da fase vapor (y)\n",
+    "versus uma sequência de x para dada T\n",
+    "\n",
     "5. [ ] Geração do envelope de fases para uma mistura binária no plano P versus x_1 (Smith, van\n",
     "Ness & Abbott, 2007, pp 260)\n",
     "  1. [ ] Desenhar P versus x_1 para dado T: curva de ponto de bolha\n",
-    "  2. [ ] Desenhar P versus y_1 para dado T: curva de ponto de orvalho\n",
-    "6. [ ] Implementar resolução de pressão de ponto de orvalho (adaptação do algoritmo de Sandler,\n",
-    "2017, pp 561, 562)\n",
-    "  1. [ ] Diagrama de fases de mistura no plano P versus T (Smith, van Ness & Abbott, 2007, pp\n",
-    "119)\n",
-    "    1. [ ] Calcular sequência de ponto de bolha versus sequência de temperatura para uma\n",
-    "mistura com uma composição definida rica no compoente leve\n",
-    "    2. [ ] Calcular sequência de ponto de orvalho versus sequência de temperatura para uma\n",
-    "mistura com composição definida rica no compoente pesado\n",
-    "    3. [ ] Desenhar P{SAT} leve, P{SAT} pesado, P{BOLHA} mistura 1 e P{ORVALHO}\n",
-    "mistura 1, P{BOLHA} mistura 2 e P{ORVALHO} mistura 2 no mesmo gráfico\n",
-    "(plano P versus T)"
+    "  2. [ ] Desenhar P versus y_1 para dado T: curva de ponto de orvalho\n"
    ]
   },
   {
