--- a/material_didatico/3_5_equacao_de_estado_cubica/aula_eos_mistura_elv.ipynb
+++ b/material_didatico/3_5_equacao_de_estado_cubica/aula_eos_mistura_elv.ipynb
@@ -504,32 +504,68 @@
       "fug: 33495.8173333 6188.87697937\n",
       "y_novo: 0.902239216877 0.187218196804\n",
       "res_loopY: 0.0894574136802\n",
+      "i: 1\n",
       "fug: 35811.3022732 7422.72521636\n",
       "y_novo: 0.902239168144 0.187218248362\n",
       "res_loopY: 1.00290151323e-07\n",
+      "i: 2\n",
+      "fug: 35811.3003389 7422.72726049\n",
+      "y_novo: 0.902239168144 0.187218248362\n",
+      "res_loopY: 3.04506420079e-13\n",
+      "i: 3\n",
       "P: 43970.1382399\n",
+      "j: 1\n",
       "fug: 38956.237829 8073.76685346\n",
       "y_novo: 0.829401390602 0.172121640493\n",
       "res_loopY: 0.0879343854112\n",
+      "i: 1\n",
       "fug: 35811.300341 7422.72725845\n",
       "y_novo: 0.829401390554 0.172121640541\n",
-      "res_loopY: 9.49884892965e-11\n",
+      "res_loopY: 9.49889611412e-11\n",
+      "i: 2\n",
       "P: 44037.1061277\n",
+      "j: 2\n",
       "fug: 35864.840658 7433.81067452\n",
       "y_novo: 0.828163230443 0.171865016383\n",
       "res_loopY: 0.00149478426907\n",
+      "i: 1\n",
       "fug: 35811.300339 7422.72726046\n",
       "y_novo: 0.828163230442 0.171865016384\n",
       "res_loopY: 1.76575420952e-12\n",
+      "i: 2\n",
       "P: 44038.3500361\n",
+      "j: 3\n",
       "fug: 35812.293321 7422.93281829\n",
       "y_novo: 0.828140267623 0.171860257053\n",
       "res_loopY: 2.77221501747e-05\n",
+      "i: 1\n",
       "fug: 35811.3003389 7422.7272605\n",
       "y_novo: 0.828140267623 0.171860257053\n",
       "res_loopY: 3.28070903777e-14\n",
+      "i: 2\n",
       "P: 44038.373142\n",
-      "P: 44038.373142 y1: 0.828140267623 y2: 0.171860257053 i: 2 j: 4\n"
+      "j: 4\n",
+      "fug: 35811.3187832 7422.73107866\n",
+      "y_novo: 0.828139841096 0.17186016865\n",
+      "res_loopY: 5.14929446999e-07\n",
+      "i: 1\n",
+      "fug: 35811.3003389 7422.7272605\n",
+      "y_novo: 0.828139841096 0.17186016865\n",
+      "res_loopY: 8.60422844084e-16\n",
+      "i: 2\n",
+      "P: 44038.3735712\n",
+      "j: 5\n",
+      "fug: 35811.3006815 7422.72733142\n",
+      "y_novo: 0.828139833173 0.171860167008\n",
+      "res_loopY: 9.5649131393e-09\n",
+      "i: 1\n",
+      "fug: 35811.3003389 7422.7272605\n",
+      "y_novo: 0.828139833173 0.171860167008\n",
+      "res_loopY: 4.16333634234e-16\n",
+      "i: 2\n",
+      "P: 44038.3735791\n",
+      "j: 6\n",
+      "P: 44038.3735791 y1: 0.828139833173 y2: 0.171860167008 i: 2 j: 6\n"
      ]
     }
    ],
@@ -564,12 +600,13 @@
     "\n",
     "j=0\n",
     "res_loopP=1\n",
-    "while (res_loopP>1e-6 and j<100):\n",
+    "soma_y=y1+y2\n",
+    "while (res_loopP>1e-9 and j<100):\n",
     "    res_loopY=1 #qq coisa maior q 1e-6\n",
     "    i=0\n",
-    "    while (res_loopY>1e-6 and i<100):\n",
+    "    while (res_loopY>1e-9 and i<100):\n",
     "        #fugacidade do vapor\n",
-    "        soma_y=y1+y2\n",
+    "        \n",
     "        Vm_L,Vm_V,nV = func_VL_VV_cubic(T=T,P=P,x1=y1/soma_y ,x2=y2/soma_y)\n",
     "        ZV=(P*Vm_V)/(R*T)\n",
     "        phi1_V=np.exp( func_lnphi1(T=T,P=P,Z=ZV,x1=y1/soma_y ,x2=y2/soma_y) )\n",
@@ -598,11 +635,13 @@
     "        y1=y1_novo #salvando o novo como o 'y velho' da iteracao anterior\n",
     "        y2=y2_novo\n",
     "        i=i+1\n",
+    "        print('i:',i)\n",
     "\n",
     "    res_loopP=abs(soma_y-1)\n",
     "    P=P*soma_y #atualiza P\n",
     "    print('P:',P)\n",
     "    j=j+1\n",
+    "    print('j:',j)\n",
     "    \n",
     "Pbolha=P\n",
     "print(\"P:\", Pbolha,\"y1:\",y1,\"y2:\",y2,\"i:\",i,\"j:\",j)"
@@ -632,12 +671,12 @@
     "\n",
     "    j=0\n",
     "    res_loopP=1\n",
+    "    soma_y=y1+y2\n",
     "    while (res_loopP>1e-6 and j<100):\n",
     "        res_loopY=1 #qq coisa maior q 1e-6\n",
     "        i=0\n",
     "        while (res_loopY>1e-6 and i<100):\n",
     "            #fugacidade do vapor\n",
-    "            soma_y=y1+y2\n",
     "            Vm_L,Vm_V,nV = func_VL_VV_cubic(T=T,P=P,x1=y1/soma_y ,x2=y2/soma_y)\n",
     "            ZV=(P*Vm_V)/(R*T)\n",
     "            phi1_V=np.exp( func_lnphi1(T=T,P=P,Z=ZV,x1=y1/soma_y ,x2=y2/soma_y) )\n",
