--- a/material_didatico/3_5_equacao_de_estado_cubica/aula_eos_puro_psat_SIMPLIFICADA.ipynb
+++ b/material_didatico/3_5_equacao_de_estado_cubica/aula_eos_puro_psat_SIMPLIFICADA.ipynb
@@ -1010,6 +1010,282 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# diagrama de fases no envelope P versus H"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def Cpgi(T): #integral cpdT\n",
+    "#     To = 273.15\n",
+    "#     Cpgi=R*(A1*(T-To)+(B1/2)*(T**2-To**2)+(C1/3)*(T**3-To**3))\n",
+    "#     return Cpgi\n",
+    "\n",
+    "# #parâmetros retirados do anexo para o n-Pentano\n",
+    "# A1 = 2.464\n",
+    "# B1 = 45.351*10**(-3)\n",
+    "# C1 = -14.111*10**(-6)\n",
+    "\n",
+    "# #calculo de Hideal considerando como temperatura de referência 273.15K\n",
+    "# def Hideal(T):\n",
+    "#     return Cpgi(T)\n",
+    "\n",
+    "# #calculo de Hreal considerando como temperatura de referência 273.15K\n",
+    "# def Hreal(P,T,Z):\n",
+    "#     return Hres(P,T,Z)+Cpgi(T)\n",
+    "\n",
+    "# def da(T): #definição de da/dT\n",
+    "#     Tr = T/Tc\n",
+    "#     da = (-0.45724*(R*Tc)**2/Pc)*fw*((1+fw*(1-Tr**.5))**2/(Tc*T))**.5  \n",
+    "#     return da\n",
+    "\n",
+    "# def Hres(P,T,Z): #definição de Hres\n",
+    "#     B=(b*P)/(R*T)\n",
+    "#     Hres = R*T*(Z-1+((T*da(T)-a(T))/(R*T*2*b*(2)**0.5))*np.log((Z+(1+2**0.5)*B)/(Z+(1-2**0.5)*B)))\n",
+    "#     return Hres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #CALCULAR H PARA CADA TSAT/PSAT/VSATL E TSAT/PSAT/VSATV\n",
+    "\n",
+    "# VL_seq=np.zeros(nPsat)\n",
+    "# VV_seq=np.zeros(nPsat)\n",
+    "# nV_seq=np.zeros(nPsat)\n",
+    "# for i in range(nPsat):\n",
+    "#     VL_seq[i],VV_seq[i],nV_seq[i]=func_VL_VV_cubic(T=seqT3[i],P=seqP3[i])\n",
+    "\n",
+    "# #amarração de VL VV em equilíbrio das isotermas\n",
+    "# Psat_test=func_Psat(Ttest)\n",
+    "# VL_test,VV_test,nV_test=func_VL_VV_cubic(T=Ttest,P=Psat_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #CALCULAR H PARA seqV DADO T\n",
+    "\n",
+    "# VL_seq=np.zeros(nPsat)\n",
+    "# VV_seq=np.zeros(nPsat)\n",
+    "# nV_seq=np.zeros(nPsat)\n",
+    "# for i in range(nPsat):\n",
+    "#     VL_seq[i],VV_seq[i],nV_seq[i]=func_VL_VV_cubic(T=seqT3[i],P=seqP3[i])\n",
+    "\n",
+    "# #amarração de VL VV em equilíbrio das isotermas\n",
+    "# Psat_test=func_Psat(Ttest)\n",
+    "# VL_test,VV_test,nV_test=func_VL_VV_cubic(T=Ttest,P=Psat_test)\n",
+    "\n",
+    "# nV=1000\n",
+    "# val_V= np.logspace(np.log10(b*1.01),2+np.log10(R*Tc/Pc),nV)\n",
+    "# listH=[]\n",
+    "# listP=[]\n",
+    "# for T in val_T:\n",
+    "#     val_P=np.zeros(nV)\n",
+    "#     val_H=np.zeros(nV)\n",
+    "#     Z=np.zeros(nV)\n",
+    "#     for i in range(nV):\n",
+    "#         val_P[i]= P_Peng (T,val_V[i])\n",
+    "#         Z[i]=(val_P[i]*val_V[i])/(R*T)\n",
+    "#         val_H[i]=Hreal(val_P[i],T,Z[i])\n",
+    "#     listH.append(val_H)\n",
+    "#     listP.append(val_P)\n",
+    "# listH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nT = len(val_T)\n",
+    "# for i in range(nT): #isotermas\n",
+    "#     plt.plot(listH[i],listP[i],label=str(val_T[i])+' K')\n",
+    "#     plt.yscale('log')\n",
+    "#     plt.ylabel(r'$P (\\mathrm{Pa})$')\n",
+    "#     plt.xlabel(r'${H} (\\mathrm{J/Kg)}})$')\n",
+    "\n",
+    "# for i in range(nT): #envelope\n",
+    "#     plt.plot(Hreal_L1,Pseq, color='y')\n",
+    "#     plt.plot(Hreal_V1,Pseq, color='y')\n",
+    "#     plt.yscale('log')\n",
+    "#     plt.ylabel(r'$P (\\mathrm{Pa})$')\n",
+    "#     plt.xlabel(r'${H} (\\mathrm{J/kg})$')\n",
+    "#     plt.title('n-Pentano')\n",
+    "#     plt.xlim(-20000,30000)\n",
+    "#     plt.ylim(1e5,1e8)\n",
+    "    \n",
+    "#     plt.scatter(Hrealc,Pc, color='y')\n",
+    "    \n",
+    "# plt.legend()\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def Sres(P,T,Z): #cálculo da S residual\n",
+    "#     B=b*P/(R*T)\n",
+    "#     Sres = R*(np.log(Z-B)+(da(T)/(R*2*b*(2)**0.5))*np.log((Z+(1+2**0.5)*B)/(Z+(1-2**0.5)*B)))\n",
+    "#     return Sres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def CpgiS(T): #cálculo da integral Cp/TdT\n",
+    "#   To=273.15\n",
+    "#   CpgiS=R*(A1*np.log(T/To)+B1*(T-To)+(C1/2)*(T**2-To**2))\n",
+    "#   return CpgiS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #Cálculo de S ideal\n",
+    "# def Sideal(P,T,Z):\n",
+    "#   Pref=1*10**5 #Pa\n",
+    "#   Sideal = CpgiS(T)-R*np.log(P/Pref)\n",
+    "#   return Sideal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #Cálculo de Sreal\n",
+    "# def Sreal(P,T,Z):\n",
+    "#   Pref=1*10**5 #Pa\n",
+    "#   Sreal = Sres(P,T,Z)+CpgiS(T)-R*np.log(P/Pref)\n",
+    "#   return Sreal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #Cálculo de T através de Van der Waals\n",
+    "# from scipy.optimize import fsolve\n",
+    "\n",
+    "  \n",
+    "# def T_PengRobinson(P,V):\n",
+    "#     from scipy.optimize import fsolve\n",
+    "#     a=27*R**2*Tc**2/(64*Pc)\n",
+    "#     b=R*Tc/(8*Pc)\n",
+    "#     def T_VanderWaals(P,V):\n",
+    "#         return (P + a/V**2 )*(V-b)/R\n",
+    "\n",
+    "#     def RES(T):\n",
+    "#         return P-P_PengRobinson(T,V)\n",
+    "\n",
+    "#     T=fsolve(func=RES,x0=T_VanderWaals(P,max(V,1.01*b)))\n",
+    "\n",
+    "#     return T\n",
+    "\n",
+    "# Ptest=P_PengRobinson(200,1e-5)\n",
+    "# print(Ptest)\n",
+    "# print( T_PengRobinson(Ptest,1e-5) )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # envelope\n",
+    "\n",
+    "# nTP=1000\n",
+    "# Tseq=np.linspace(300,Tc*.99,nTP)\n",
+    "# Pseq=np.zeros(nTP)\n",
+    "# VL_seq=np.zeros(nTP)\n",
+    "# VV_seq=np.zeros(nTP)\n",
+    "# ZL_seq=np.zeros(nTP)\n",
+    "# ZV_seq=np.zeros(nTP)\n",
+    "# nV_seq=np.zeros(nTP)\n",
+    "# Sreal_L1=np.zeros(nTP)\n",
+    "# Sreal_V1=np.zeros(nTP)\n",
+    "\n",
+    "# for i in range(nTP):\n",
+    "#     Pseq[i]=P_sat(Tseq[i])\n",
+    "#     VL_seq[i],VV_seq[i],ZL_seq[i],ZV_seq[i],nV_seq[i]=V_cubic(Tseq[i],Pseq[i])\n",
+    "#     Sreal_L1[i]= Sreal(Pseq[i],Tseq[i],ZL_seq[i])\n",
+    "#     Sreal_V1[i] = Sreal(Pseq[i],Tseq[i],ZV_seq[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # isobaras\n",
+    "\n",
+    "# val_P=Pc*np.array([.5,.7,.95,1,1.25]) #valores de pressão estipulados\n",
+    "# nV=1000\n",
+    "# val_V= np.logspace(np.log10(1.01*b),2+np.log10(R*Tc/Pc),nV) #valores de pressão estipulados\n",
+    "# listT=[]\n",
+    "# listS=[]\n",
+    "# for P in val_P: #para cada uma das pressões, será calculado um vetor com valores de T e um com valores de S\n",
+    "#     val_T=np.zeros(nV)\n",
+    "#     val_S=np.zeros(nV)\n",
+    "#     Z=np.zeros(nV)\n",
+    "#     for i in range(nV): #para cada volume terá um valor de T e um de S\n",
+    "#         val_T[i]= TPeng (P,val_V[i])\n",
+    "#         Z[i]=(P*val_V[i])/(R*val_T[i])\n",
+    "#         val_S[i]=Sreal(P,val_T[i],Z[i])\n",
+    "#     listT.append(val_T)\n",
+    "#     listS.append(val_S)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i in range(nT):\n",
+    "#     plt.plot(Sreal_L1,Tseq, color='y')\n",
+    "#     plt.plot(Sreal_V1,Tseq, color='y')\n",
+    "#     plt.ylabel(r'$T (\\mathrm{K})$') \n",
+    "#     plt.xlabel(r'${S} (\\mathrm{J/kg})$')\n",
+    "#     plt.title('n-Pentano')\n",
+    "#     plt.xlim(-70,50)\n",
+    "#     plt.ylim(300,550)\n",
+    "#     plt.scatter(Srealc,Tc, color='y')\n",
+    "\n",
+    "#     for i in range(len(listS)): #desenho das isobáricas\n",
+    "#         plt.plot(listS[i],listT[i])    \n",
+    "# plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Conclusão\n",
     "\n",
     "A solução do equilibrio liquido vapor por eos não é simples. há que se preocupar com solução trivial (GresL=GresV | vl=vv; eos retornando uma unica raiz real; dificuldade de convergencia dos metodo numericos...)\n",
